<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.LoginActivity"
        android:fillViewport="true"
        >

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:id="@+id/login_layout_component"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <ImageView
                android:id="@+id/settingImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                app:srcCompat="@drawable/baseline_settings_24" />

            <ImageView
                    android:id="@+id/image_login_illustration"
                    android:contentDescription="@string/login_page_illustration"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/image_login"
                    />

            <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:alpha="0"
                    tools:alpha="100"
                    android:layout_marginStart="32dp"
                    />

            <TextView
                    android:id="@+id/message_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:alpha="0"
                    tools:alpha="100"
                    android:text="@string/login_subtitle"
                    />

            <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:alpha="0"
                    tools:alpha="100"
                    />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_edit_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:alpha="0"
                    tools:alpha="100"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_mail_24">

                <com.alz19.storyapp2.component.edit.EmailEditText
                        android:id="@+id/edit_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:alpha="0"
                    tools:alpha="100"
                    />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_edit_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    android:alpha="0"
                    tools:alpha="100"
                    app:startIconDrawable="@drawable/baseline_lock_24">

                <com.alz19.storyapp2.component.edit.PasswordEditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        tools:ignore="SpeakableTextPresentCheck"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="32dp"
                android:text="@string/login"
                android:alpha="0"
                tools:alpha="100"
                android:backgroundTint="@color/navy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />

            <LinearLayout
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    >

                <TextView
                        android:layout_marginEnd="10dp"
                        android:id="@+id/text_login_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_question"
                        />

                <TextView
                        android:id="@+id/text_button_login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/navy"
                        />
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>


</ScrollView>