...
    <string name="cannot_get_story_detail">Unable to get story detail!</string>
    <string name="no_image">Please insert an image!</string>
    <string name="no_media_selected">No media selected</string>
    <string name="cannot_get_camera">Unable to access camera media</string>
    <string name="desc_empty">Description must be filled</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
...
